<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_PumpControl" Id="{e352acee-8283-4963-a788-eaa727e77287}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PumpControl

VAR_INPUT
	rVolume 	: REAL;   			//Volume to be dispensed in milliliters
    iVelocity 	: INT;            	//Pump speed in RPM
    bDirection 	: BOOL;          	//Pump Direction: TRUE = Forward, FALSE = Reverse 
    tRunTime 	: TIME := T#0S; 	//Operating time, used in recirculation. Optional
END_VAR

VAR_OUTPUT
	bDone 	: BOOL;		//Indicates that the operation has been completed
    bError 	: BOOL;		//Indicates that there was an error during the operation
END_VAR

VAR
	rTotalRevolutions 		: REAL;   	//Total revolutions required to reach volume
    rRevolutionsCompleted 	: REAL; 	//Completed revolutions
    Timer 	 : TON;		//Timer for recirculation or time-based operation
    bRunning : BOOL;	//Flag to indicate operation in progress
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF rVolume > 0 THEN
    rTotalRevolutions := rVolume / 0.01; //1 revolution = 0.01 ml - Hipotesys 
ELSE
    rTotalRevolutions := 0; //Time-based operation only
END_IF;

//
IF NOT bRunning THEN
    //Main Logic
    rRevolutionsCompleted := 0;
    bRunning := TRUE;

    IF tRunTime > T#0S THEN
        //Time-based operation
        Timer(IN := TRUE, PT := tRunTime);
    END_IF;
END_IF;

IF bRunning THEN
    IF Timer.Q THEN
        //Time-based operation completed
        bDone := TRUE;
        bRunning := FALSE;
    ELSE
        //Volume-based operation
        IF rRevolutionsCompleted < rTotalRevolutions THEN
            //Simulate pump rotation based on speed
            rRevolutionsCompleted := rRevolutionsCompleted + (TO_REAL(iVelocity) * 0.01); //Incremento por ciclo
        ELSE
            //Volume reached
            bDone := TRUE;
            bRunning := FALSE;
        END_IF;
    END_IF;
END_IF;

//Error handling
IF rTotalRevolutions < 0 OR iVelocity <= 0 THEN
    bError := TRUE;
    bDone := FALSE;
    bRunning := FALSE;
END_IF;]]></ST>
    </Implementation>
    <LineIds Name="FB_PumpControl">
      <LineId Id="23" Count="40" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>